change in channels to 2

--- a/config/no-eyes-no-conf/train_joint.yaml
+++ b/config/no-eyes-no-conf/train_joint.yaml
@@ -20,6 +20,7 @@ model_args:
   num_gcn_scales: 8
   num_g3d_scales: 8
   graph: graph.no_eyes.AdjMatrixGraph
+  in_channels: 2
 
 # optim
 weight_decay: 0.0005
